<resources>
    <string name="app_name">ENT NOW</string>
    <string name="app_subtitle">Save money, have fun</string>
    <string name="signup_facebook">Login with Facebook</string>
    <string name="or">or</string>
    <string name="signup_email">Sign up with e-mail</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="facebook_app_id">477399965940263</string>
    <string name="fb_login_protocol_scheme">fb477399965940263</string>

    <string name="sample_business_name">Loading.</string>
    <string name="sample_business_description">Loading desc.</string>
    <string name="sample_business_time">Loading time.</string>

    <string name="enter_email">E-Mail</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="view_account">View my account</string>
    <string name="password_length">Password must be 6 characters long.</string>
    <string name="password_match">Passwords do not match.</string>
    <string name="email_invalid">Email does not appear valid.</string>
    <string name="email_not_unique">Email is already in use.</string>
    <string name="account_created">Account successfully created.</string>
    <string name="login_failed">Username or password is incorrect.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="check_in">Check in!</string>
    <string name="check_in_to_earn_points">Check in to earn points!</string>
    <string name="claim_deal">Claim this deal!</string>
    <string name="not_enough_points">You do not have enough points to redeem this deal.</string>
    <string name="proceed">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="current_deals">Current Deals</string>

    <string name="availability">Availability:</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <string name="points">This deal is costs LOADING points.</string>
    <string name="cashier">Have the cashier scan the QR code by the register.</string>

    <string name="camera_permission">You must allow this app access to the camera to check in.</string>
    <string name="invalid_qr_code">The detected QR Code is invalid.</string>
    <string name="processed_qr_code_check_in">You successfully checked in!</string>
    <string name="processed_qr_code_deal">You successfully claimed a deal!</string>
    <string name="ok">OK</string>

</resources>
