<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/checkIn"
        android:checkable="false"
        android:title="@string/check_in"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:checkable="false"
        android:title="@string/logout" />
    <item
        android:id="@+id/my_account"
        android:checkable="false"
        android:title="@string/view_account" />
    <!--
    <item
        android:id="@+id/makeDeal"
        android:checkable="false"
        android:title="Make a new deal" />
    <item
        android:id="@+id/makeBusiness"
        android:checkable="false"
        android:title="Make a new business" />
    <item
        android:id="@+id/seeBusinesses"
        android:checkable="false"
        android:title="See list of businesses" />-->
</menu>