<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignTop="@+id/text"
        android:layout_alignBottom="@+id/text"
        android:scaleType="centerCrop"/>
    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignTop="@+id/text"
        android:layout_alignBottom="@+id/text"
        android:src="@color/darkTransparent" />

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing">

        <TextView
            android:id="@+id/name"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light"
            android:gravity="center"
            android:text="@string/sample_business_name"
            android:layout_marginBottom="@dimen/halfspacing" />
        <TextView
            android:id="@+id/location"
            android:textStyle="italic"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light"
            android:gravity="center"
            android:text="@string/sample_business_time" />
        <TextView
            android:id="@+id/time"
            android:textStyle="italic"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light"
            android:gravity="center"
            android:text="@string/sample_business_time" />
        <TextView
            android:id="@+id/points"
            android:textStyle="italic"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light"
            android:gravity="center"
            android:text="@string/sample_business_time" />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="@dimen/halfspacing"
            android:text="@string/sample_business_description" />

    </LinearLayout>
</RelativeLayout>
